[gd_scene load_steps=6 format=3 uid="uid://b4dut3nqrk03"]

[ext_resource type="Script" path="res://scripts/Characthers/pathfinding/Infected_cells_2.gd" id="1_hcc2l"]
[ext_resource type="Texture2D" uid="uid://72vg61sfbcfe" path="res://sprites/Monster/infectedcell/InfectedCell.png" id="2_l1gyh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kdiig"]
atlas = ExtResource("2_l1gyh")
region = Rect2(0, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_p7756"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdiig")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_ns1l6"]

[node name="InfectedCell" type="CharacterBody3D" groups=["infected_cell"]]
collision_layer = 32
collision_mask = 2
platform_floor_layers = 4294967041
platform_wall_layers = 1
script = ExtResource("1_hcc2l")

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.00263292)

[node name="BlinkCooldown" type="Timer" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = -1.0
path_max_distance = 1.01
avoidance_enabled = true
height = 2.0
radius = 1.0
neighbor_distance = 10.0
use_3d_avoidance = true
avoidance_mask = 15

[node name="InfectedlCellAnimation" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.219175, 0, 0, 0, 0.219175, 0, 0, 0, 0.219175, 0, 0.214727, 0)
billboard = 1
sprite_frames = SubResource("SpriteFrames_p7756")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_ns1l6")
